--- a/.eslintrc
+++ b/.eslintrc
@@ -3,5 +3,6 @@
     "rules":{
         "linebreak-style": 0,
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
-      }
+    },
+    "parser": "babel-eslint"
 }
