--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,14 @@
     "extends": "airbnb",
     "rules":{
         "linebreak-style": 0,
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+        "jsx-a11y/anchor-is-valid": [ "error", {
+            "components": [ "Link" ],
+            "specialLink": [ "hrefLeft", "hrefRight" ],
+            "aspects": [ "noHref", "invalidHref", "preferButton" ],
+            "react/destructuring-assignment": [<enabled>, 'never']
+          }]
     },
-    "parser": "babel-eslint"
+    "parser": "babel-eslint",
+    "globals": { "fetch": false }
 }
